Minor bug and visual fixes Better theme integration from action hooks z-index for searchbox results

--- a/styles/public.scss
+++ b/styles/public.scss
@@ -1196,7 +1196,7 @@ $laptop : 1280px;
             border:var(--element-border);
             border-radius:var(--element-border-radius);
             grid-gap:0px;
-            grid-template-columns: 2fr 1fr;
+            grid-template-columns: 1fr auto;
             grid-template-rows: auto;
             grid-template-areas: 
                 "input advanced"
@@ -2523,6 +2523,22 @@ body.si-modal-open{
                 padding:87px 20px 96px 20px;
             }
 
+            
+            textarea,input{
+                border:var(--element-border);
+                border-radius:var(--element-border-radius);
+                
+                &:focus{
+                    border-color: var(--text-color);
+                }
+            }
+            select,textarea,input{
+                width:100%;
+                transition:0.25s;
+                &.ng-touched.ng-invalid{
+                    border-color:var(--error-color);
+                }
+            }
         }
         .modal-footer{
             padding:10px;
@@ -2589,6 +2605,7 @@ body.si-modal-open{
                         "subject subject"
                         "message message"
                     ;
+                
             }
         }
     }
@@ -3012,7 +3029,7 @@ body.si-modal-open{
             opacity:0;
             pointer-events:none;
         
-        z-index:2;
+        z-index:999;
         //background:#fff;
         box-shadow:rgba(#000,0.5) 0 0px 0px;
         .list{
